@@ -3,6 +3,8 @@ Revision history for {{$dist->name}}
 {{$NEXT}}
           - further simplified the build templating code, to take advantage of
             new features of [MungeFile::WithData]
+          - added tooltip for each avatar image, providing PAUSE id, name, and
+            number of distributions
 
 0.006     2013-08-16 05:32:38Z (Karen Etheridge)
           - proper fix for html image spacing (for real this time?)
